[package]
name = "drones"
version = "0.1.0"
edition = "2021"

[dependencies]
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize", "debug"] }
crossbeam-channel = "0.5"
toml = "0.8"
log = { version = "0.4", features = ["release_max_level_error"] }
pretty_env_logger = "0.5"
rand = "0.8"
