[package]
name = "ap2024_unitn_cppenjoyers_drone"
version = "0.9.0"
edition = "2021"

[dependencies]
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize", "debug"] }
crossbeam-channel = "0.5"
log = "0.4"
pretty_env_logger = "0.4"
rand = "0.8"
common = { git = "https://github.com/Cpp-enjoyers/common.git" }

[features]
unlimited_buffer = []


[lib]
name = "ap2024_unitn_cppenjoyers_drone"
path = "src/lib.rs"

[dev-dependencies]
drone_tester = { git = "https://github.com/daw-dev/drone-tester.git" }
